crates/runtime/tests/iceberg/delete/snapshots/integration__iceberg__delete__delete_all_rows_before_delete.snap
---
source: crates/runtime/tests/iceberg/delete/mod.rs
expression: pretty
---
+---------+-------------+----------+
| int_col | boolean_col | long_col |
+---------+-------------+----------+
| 1       | true        | 100      |
| 2       | true        | 200      |
| 3       | false       | 300      |
| 4       | false       | 400      |
+---------+-------------+----------+
