crates/runtime/tests/iceberg/delete/snapshots/integration__iceberg__delete__delete_no_match_result.snap
---
source: crates/runtime/tests/iceberg/delete/mod.rs
expression: pretty
---
+-------+
| count |
+-------+
| 0     |
+-------+
