crates/runtime/tests/iceberg/delete/snapshots/integration__iceberg__delete__delete_partial_result.snap
---
source: crates/runtime/tests/iceberg/delete/mod.rs
expression: pretty
---
+-------+
| count |
+-------+
| 2     |
+-------+
