crates/runtime/tests/iceberg/delete/snapshots/integration__iceberg__delete__delete_rows_after_partial_delete.snap
---
source: crates/runtime/tests/iceberg/delete/mod.rs
expression: pretty
---
+---------+-------------+----------+
| int_col | boolean_col | long_col |
+---------+-------------+----------+
| 1       | true        | 100      |
| 2       | true        | 200      |
+---------+-------------+----------+
